# DynamicAgents

./: DockerFile  pyproject.toml
src/agent/: agent.py
