[project]
name = "langgraphfunctionalapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["langgraph>=1.0.4",
    "langchain>=1.2.6",
    "python-dotenv>=1.0.1",
    "langchain-google-genai>=4.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "chromadb",
    "fastapi",
    "uvicorn",
    "pypdf>=6.7.0",
    "beautifulsoup4",
    "protobuf"]
[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.4.7",
    "pytest>=8.3.5",
]
